# lunar_mining_simulation

./: .gitignore  README.md  pyproject.toml
simulation/: run.py  station.py  truck.py
tests/: test_simulation.py  test_station.py  test_truck.py
