[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar_mining_simulation"
version = "0.1.0"
description = "Lunar Mining Simulation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Faiz Mirza", email = "faizerdini@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["simulation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

